@@ -1,3 +1,8 @@
+2009-06-08  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/ChartPanel.java
+    (setMouseWheelEnabled): Use correct check for disable branch.
+
 2009-06-01  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/ChartPanel.java
